# embodied-claude

./: .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  README.md  README_en.md  autonomous-action.sample.sh  autonomous-action.sh  package.json  test-autonomous.sh
.claude/: settings.json  settings.local.json
.claude/commands/: read.md
.claude/hooks/: com.embodied-claude.heartbeat.plist  hearing-daemon.py  hearing-hook.sh  heartbeat-daemon.sh  interoception.sh
.github/workflows/: ci.yml
desire-system/: .env.example  .gitignore  desire_updater.py  pyproject.toml  server.py
desire-system/tests/: test_desire_updater.py
elevenlabs-t2s-mcp/: pyproject.toml
elevenlabs-t2s-mcp/src/elevenlabs_t2s_mcp/: config.py  go2rtc.py  server.py
elevenlabs-t2s-mcp/tests/: test_config.py  test_go2rtc.py
installer/src/installer/pages/: dependencies.py  install.py
ip-webcam-mcp/: pyproject.toml
ip-webcam-mcp/src/ip_webcam_mcp/: __init__.py  server.py
mcp-pet/: .env.example  README.md  pyproject.toml
mcp-pet/src/mcp_pet/: __init__.py  config.py  server.py  types.py  web.py
mcp-pet/src/mcp_pet/senses/: __init__.py  _onvif_adapter.py  base.py  vision.py
mcp-pet/src/mcp_pet/static/: client.html  viewer.html
mcp-pet/tests/: conftest.py  test_config.py  test_vision.py  test_web.py
memory-mcp/: README.md  pyproject.toml
memory-mcp/scripts/: merge_memories.py  migrate_chroma_to_sqlite.py  migrate_embeddings.py
memory-mcp/src/memory_mcp/: association.py  bm25.py  config.py  consolidation.py  embedding.py  episode.py  image_utils.py  memory.py  normalizer.py  predictive.py  sensory.py  server.py  store.py  types.py  vector.py  workspace.py
memory-mcp/tests/: conftest.py  test_association.py  test_bm25.py  test_divergent_recall.py  test_episode.py  test_image_utils.py  test_memory.py  test_normalizer.py  test_predictive.py  test_sensory.py  test_types.py  test_working_memory.py
mobility-mcp/: pyproject.toml
mobility-mcp/src/mobility_mcp/: __init__.py  config.py  server.py  vacuum.py
mobility-mcp/tests/: test_config.py  test_server.py  test_vacuum.py
morning-call-mcp/: .env.example  README.md  README_en.md  pyproject.toml
morning-call-mcp/src/morning_call_mcp/: caller.py  config.py  server.py
scripts/: reader.ts
tts-mcp/: pyproject.toml
tts-mcp/src/tts_mcp/: __init__.py  config.py  playback.py  server.py
tts-mcp/src/tts_mcp/engines/: __init__.py  elevenlabs.py  voicevox.py
tts-mcp/tests/: test_config.py  test_engines.py  test_go2rtc.py
usb-webcam-mcp/src/usb_webcam_mcp/: server.py
wifi-cam-mcp/: .env.example  claude_desktop_config.example.json  pyproject.toml
wifi-cam-mcp/src/wifi_cam_mcp/: camera.py  config.py  server.py
