[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pet"
version = "0.1.0"
description = "PErsonal Terminal - Unified MCP server that gives AI its senses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
ptz = [
    "onvif-zeep-async>=4.0.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
mcp-pet = "mcp_pet.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
