[project]
name = "morning-call-mcp"
version = "0.1.0"
description = "MCP server for Kokone morning call via Twilio + ElevenLabs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "twilio>=9.0.0",
    "python-dotenv>=1.0.0",
    "elevenlabs>=2.36.1",
]

[project.scripts]
morning-call-mcp = "morning_call_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morning_call_mcp"]

[tool.ruff]
line-length = 100
